--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "author": "allanjuarez-io",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon src/app.ts",
+    "dev": "cross-env NODE_ENV=development ts-node src/app.ts",
     "build": "tsc",
     "start": "cross-env NODE_ENV=production node dist/app.js"
   },
